3 things.  1.) Set default component to flex layout.  2.) Made <router-outlet> to have a display=none to fix gap spacing issue, 3.) Added a Header with a mat-tool bar

--- a/src/flex_container_styles.scss
+++ b/src/flex_container_styles.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  gap: 4px;
+  row-gap: 4px;
   /* not 100vh cause the border below will make create a overflow scroll bar effect.  if so subtract (top-border height and bottom-border-height) */
   height: calc(100vh - 0px);
 }
@@ -33,24 +33,28 @@
 .flex-container > .flex-container-main {
   /* This controls how much space the "main area" takes up.  Considering header and footer are */
   flex: 1;
-
   display: flex;
   flex-wrap: nowrap;
-  gap: 4px;
+  /* Note that this gap (column-gap) has become a major issue when we have use router-outlet to get to actual display components.  Mediating views through router-outlet seems to double gap before the router-outlet proxied component */
+  /* That is because of the presense of <router-outlet> proxying to content components.  Angular seems to add a blank-clild of <router-outlet> tag in the generated html as a direct descendent of flex-container.  That allocates a gap item */
+  /* The fix is to simply have a style="display: none;" on <router-outlet> tag. */
+  column-gap: 4px;
   flex-direction: row;
 }
 
 .flex-container > .flex-container-main > app-nav {
   flex: 0 0 200px;
-  /* margin-left: 0.2rem; */
+  margin-left: 0.2rem;
   background-color: #2A92BF;
 }
 
+
 .flex-container > .flex-container-main > app-aside {
   flex: 0 0 200px;
-  /* margin-left: 0.2rem; */
   background-color: #2A92BF;
+  margin-right: 0.2rem;
 }
+
 
 .flex-container > .flex-container-main > app-main,
 .flex-container > .flex-container-main > app-privacy-policy {
